# heap

./: README.md  heap.cabal
.github/workflows/: ci.yaml
bench/: Main.hs
docs/: doc-index.html  doc-index.json  heap-2.0.0.0  index.html
docs/heap-2.0.0.0-inplace/: Data-Heap-Double-Debug.html  Data-Heap-Double-Unsafe.html  Data-Heap-Double.html  Data-Heap-Float-Debug.html  Data-Heap-Float-Unsafe.html  Data-Heap-Float.html  Data-Heap-Ord-Debug.html  Data-Heap-Ord-Unsafe.html  Data-Heap-Ord.html  Data-Heap-Word-Debug.html  Data-Heap-Word-Unsafe.html  Data-Heap-Word.html  changes  doc-index.html  doc-index.json  heap.haddock  index.html
docs/heap-2.0.0.0-inplace/src/: Data.Heap.Common.Internal.html  Data.Heap.Double.Debug.html  Data.Heap.Double.Internal.html  Data.Heap.Double.Unsafe.html  Data.Heap.Double.html  Data.Heap.Float.Debug.html  Data.Heap.Float.Internal.html  Data.Heap.Float.Unsafe.html  Data.Heap.Float.html  Data.Heap.Ord.Debug.html  Data.Heap.Ord.Internal.html  Data.Heap.Ord.Unsafe.html  Data.Heap.Ord.html  Data.Heap.Word.Debug.html  Data.Heap.Word.Internal.html  Data.Heap.Word.Unsafe.html  Data.Heap.Word.html
src/Data/Heap/: Blank.hs  Double.hs  Float.hs  Ord.hs  Word.hs
src/Data/Heap/Blank/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/Heap/Common/: Internal.hs
src/Data/Heap/Double/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/Heap/Float/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/Heap/Ord/: Debug.hs  Internal.hs  Unsafe.hs
src/Data/Heap/Word/: Debug.hs  Internal.hs  Unsafe.hs
test/: Main.hs
test/Test/Heap/: Ord.hs
