Cabal-Version:       3.0
Name:                heap
Version:             2.0.0.0

Category:            Data Structures
Synopsis:            Binomial min-heap.
Description:
  Spine-strict binomial min-heaps, both Ord-constrained and specialized.

  See the <https://github.com/pruvisto/heap/blob/master/README.md README>
  for a brief overview of the data structures included in this package.

License:             BSD-3-Clause
License-File:        LICENSE
Copyright:           (c) 2008-2009 Stephan Friedrichs,
                     (c) 2024 Oleksii Divak
Author:              Stephan Friedrichs, Oleksii Divak
Maintainer:          Oleksii Divak <frozenwitness@gmail.com>

Build-Type:          Simple

extra-source-files:
  src/Data/Heap/Blank.hs
  src/Data/Heap/Blank/Debug.hs
  src/Data/Heap/Blank/Internal.hs
  src/Data/Heap/Blank/Unsafe.hs

extra-doc-files:
  changes
  README.md


Source-Repository head
  Type: git
  Location: git://github.com/pruvisto/heap.git


Library
  Build-Depends:     base    >= 4.12  && < 5
                   , deepseq >= 1.4.3 && < 1.6

  hs-source-dirs:    src

  ghc-options:       -Wall

  exposed-modules:   Data.Heap.Double
                     Data.Heap.Double.Debug
                     Data.Heap.Double.Unsafe
                     Data.Heap.Float
                     Data.Heap.Float.Debug
                     Data.Heap.Float.Unsafe
                     Data.Heap.Ord
                     Data.Heap.Ord.Debug
                     Data.Heap.Ord.Unsafe
                     Data.Heap.Word
                     Data.Heap.Word.Debug
                     Data.Heap.Word.Unsafe

  other-modules:     Data.Heap.Common.Internal
                     Data.Heap.Double.Internal
                     Data.Heap.Float.Internal
                     Data.Heap.Ord.Internal
                     Data.Heap.Word.Internal

  Default-Language:  Haskell2010


test-suite properties
  type:              exitcode-stdio-1.0

  build-depends:     base
                   , deepseq
                   , heap
                   , hspec
                   , random

  hs-source-dirs:    test

  main-is:           Main.hs

  other-modules:     Test.Heap.Ord

  ghc-options:       -Wall

  default-language:  Haskell2010


benchmark bench
  type:              exitcode-stdio-1.0

  build-depends:     base
                   , heap
                   , heaps
                   , pqueue
                   , random
                   , tasty
                   , tasty-bench
                   , weigh

  hs-source-dirs:    bench

  main-is:           Main.hs

  ghc-options:       -Wall

  default-language:  Haskell2010
